Создала стиль для кнопок

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="button_8">8</string>
     <string name="button_9">9</string>
     <string name="button_0">0</string>
-    <string name="button_start">START</string>
+    <string name="button_start">start</string>
     <string name="button_sum">+</string>
     <string name="button_min">-</string>
     <string name="button_mult">*</string>
